--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- Primary Meta Tags -->
 <meta name="title" content="The Saturn Studio | Bespoke Design Studio for Visionary Brands">
 <meta name="description" content="The Saturn Studio is a bespoke design studio partnering with visionary clients. We create considered, high-end design for brands that value craft over cost.">
-<meta name="keywords" content="bespoke design studio, premium branding, luxury real estate design, architectural branding, interior design branding, high-end design studio">
+<meta name="keywords" content="bespoke design studio, premium branding, luxury real estate design, architectural branding, interior design branding, high-end design studio, real estate">
 <meta name="author" content="The Saturn Studio">
 <meta name="robots" content="index, follow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
