--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=FunnelDisplay:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
 
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
